--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="/HTML files/productPage.html">Books</a>
         <a href="/HTML files/adminPage.html">Subscribe</a>
         <a href="/HTML files/checkoutPage.html">Checkout</a>
-        <a href="/HTML files/contantPage.html">ContactUs</a>
+        <a href="/HTML files/contactPage.html">ContactUs</a>
     </nav>
 
 
