--- a/HTML files/checkoutPage.html
+++ b/HTML files/checkoutPage.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 <body>
-    <header><h1>AbantuReads</h1></header>
+    <header><h1>AbantuReads</h1>
+        <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
+    </header>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="/HTML files/aboutPage.html">AboutUs</a>
+        <a href="/HTML files/aboutPage.html">Who Are We?</a>
         <a href="/HTML files/productPage.html">Books</a>
-        <a href="/HTML files/adminPage.html">Subscribe</a>
+        <a href="/HTML files/adminPage.html">Sign Up</a>
         <a href="/HTML files/checkoutPage.html">Checkout</a>
-        <a href="/HTML files/contactPage.html">ContactUs</a>
+        <a href="/HTML files/contactPage.html">Write Us</a>
     </nav>
 
   
