--- a/HTML files/contactPage.html
+++ b/HTML files/contactPage.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
-    <link rel="stylesheet" href="/Styling/">
+    <link rel="stylesheet" href="/Styling/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 <body>
-    <header><h1>AbantuReads</h1></header>
+    <header><h1>AbantuReads</h1>
+        <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
+    </header>
     <nav>
         <a href="/index.html">Home</a>
-        <a href="/HTML files/aboutPage.html">AboutUs</a>
+        <a href="/HTML files/aboutPage.html">Who Are We?</a>
         <a href="/HTML files/productPage.html">Books</a>
-        <a href="/HTML files/adminPage.html">Subscribe</a>
+        <a href="/HTML files/adminPage.html">Sign Up</a>
         <a href="/HTML files/checkoutPage.html">Checkout</a>
-        <a href="/HTML files/contactPage.html">ContactUs</a>
+        <a href="/HTML files/contactPage.html">Write Us</a>
     </nav> 
 
 
