--- a/HTML files/productPage.html
+++ b/HTML files/productPage.html
@@ -19,6 +19,11 @@
         <a href="/HTML files/checkoutPage.html">Checkout</a>
         <a href="/HTML files/contactPage.html">Write Us</a>
     </nav>
+    <div class="s-buttons">
+        <input type="search">
+        <button id="searchBtn">Search</button>
+        <button id="sortBtn">Sort</button>
+    </div>
 
 
 <script src="/Scripts/productPage.js"></script>
