--- a/HTML files/productPage.html
+++ b/HTML files/productPage.html
@@ -25,13 +25,13 @@
         <button id="sortBtn">Sort</button>
     </div>
 
-    <div class="card" id="products-content">
+    <table id="products-content">
         <h3>Library</h3>
         <p id="bookName">Name:</p>
         <p id="bookPrice">Price:</p>
         <p id="bookDescription">Description:</p>
         <img id="bookImage" class="book-image" src="" alt="Book Image">
-      </div>
+    </table>
 
 <script src="/Scripts/productPage.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
