--- a/HTML files/contactPage.html
+++ b/HTML files/contactPage.html
@@ -15,7 +15,7 @@
         <a href="/index.html">Home</a>
         <a href="/HTML files/aboutPage.html">Who Are We?</a>
         <a href="/HTML files/productPage.html">Books</a>
-        <a href="/HTML files/adminPage.html">Sign Up</a>
+        <a href="/HTML files/adminPage.html">Admin</a>
         <a href="/HTML files/checkoutPage.html">Checkout</a>
         <a href="/HTML files/contactPage.html">Write Us</a>
     </nav> 
