--- a/HTML files/productPage.html
+++ b/HTML files/productPage.html
@@ -15,7 +15,7 @@
         <a href="/index.html">Home</a>
         <a href="/HTML files/aboutPage.html">Who Are We?</a>
         <a href="/HTML files/productPage.html">Books</a>
-        <a href="/HTML files/adminPage.html">Sign Up</a>
+        <a href="/HTML files/adminPage.html">Admin</a>
         <a href="/HTML files/checkoutPage.html">Checkout</a>
         <a href="/HTML files/contactPage.html">Write Us</a>
     </nav>
@@ -24,14 +24,7 @@
         <button id="searchBtn">Search</button>
         <button id="sortBtn">Sort</button>
     </div>
-
-    <table id="products-content">
-        <h3>Library</h3>
-        <p id="bookName">Name:</p>
-        <p id="bookPrice">Price:</p>
-        <p id="bookDescription">Description:</p>
-        <img id="bookImage" class="book-image" src="" alt="Book Image">
-    </table>
+    <main></main>
 
 <script src="/Scripts/productPage.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
