--- a/HTML files/aboutPage.html
+++ b/HTML files/aboutPage.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="/Styling/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
+<style>
+    body{
+       background-image: url("https://i.postimg.cc/XJBSWqdK/goldcoasthoney.jpg");
+    }
+</style>
 <body>
-    <header><h1>AbantuReads</h1>
+    <header><h1>AbantuReads</h1> 
         <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
     </header>
     <nav>
