--- a/HTML files/adminPage.html
+++ b/HTML files/adminPage.html
@@ -25,7 +25,7 @@
         </table>
     </main>
 
-    <div class="spinner-border text-primary" role="status">
+    <div class="spinner text-primary" role="status">
         <span class="visually-hidden">Loading...</span>
     </div> 
     
