--- a/HTML files/contactPage.html
+++ b/HTML files/contactPage.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/Styling/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
+<style>
+    body{
+       background-image: url("https://i.postimg.cc/23pQVc19/blackacademia.jpg");
+    }
+</style>
 <body>
     <header><h1>AbantuReads</h1>
         <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
@@ -20,6 +25,28 @@
         <a href="/HTML files/contactPage.html">Write Us</a>
     </nav> 
 
+    <div class="contact-form">
+        <h2>Get In Touch!</h2>
+        <form>
+            <label for="email">Email Address:</label>
+            <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+            <label for="Message">Message</label>
+            <input type="message" id="message" name="message" placeholder="Message Us" required>
+          <div class="send-message">
+            <button type="submit">Send</button>
+          </div>
+        </form>
+    </div>
+    
+    <div class="tagline">
+        <p id="wUs">Join us in celebrating the African culture & heritage, and let's redefine the telling of our stories, one book at a time. 
+            Write us a messa, we would love to hear from you!</p>
+         <ul>
+             <li id="wUs">Email: info@abantureads.com</li>
+             <li id="wUs">Contact No: (021) 460-4646</li>
+             <li id="wUs">Social Media: @AbantuReads_za</li>
+         </ul>
+    </div>
 
 
 <script src="/Scripts/contactPage.js"></script>
