--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="/Styling/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
-<body>
-    <header><h1>AbantuReads</h1>
-    <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
-    </header>
-    <nav>
-        <a href="/index.html">Home</a>
-        <a href="/HTML files/aboutPage.html">Who Are We?</a>
-        <a href="/HTML files/productPage.html">Books</a>
-        <a href="/HTML files/adminPage.html">Sign Up</a>
-        <a href="/HTML files/checkoutPage.html">Checkout</a>
-        <a href="/HTML files/contactPage.html">Write Us</a>
-    </nav>
 
-<div id="homeImage">
-    <img src="https://i.postimg.cc/wBZJPxbX/young-student-working-assignment.jpg" alt="">
-</div>
+<header><h1>AbantuReads</h1>
+    <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
+</header>
+<nav>
+    <a href="/index.html">Home</a>
+    <a href="/HTML files/aboutPage.html">Who Are We?</a>
+    <a href="/HTML files/productPage.html">Books</a>
+    <a href="/HTML files/adminPage.html">Admin</a>
+    <a href="/HTML files/checkoutPage.html">Checkout</a>
+    <a href="/HTML files/contactPage.html">Write Us</a>
+</nav>
+
+<body>
+    <div id="homeImage">
+        <img src="https://i.postimg.cc/wBZJPxbX/young-student-working-assignment.jpg" alt="">
+    </div>
 
 
 <script src="/Scripts/landingPage.js"></script>
