updated checkout file

--- a/HTML files/checkoutPage.html
+++ b/HTML files/checkoutPage.html
@@ -20,6 +20,10 @@
         <a href="/HTML files/contactPage.html">Write Us</a>
     </nav>
 
+    <main>
+        
+    </main>
+
   
 
 <script src="/Scripts/checkoutPage.js"></script>
