--- a/HTML files/contactPage.html
+++ b/HTML files/contactPage.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
     <link rel="stylesheet" href="/Styling/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 </head>
 <style>
     body{
-       background-image: url("https://i.postimg.cc/23pQVc19/blackacademia.jpg");
-    }
-</style>
+        background-image: url("https://i.postimg.cc/XJBSWqdK/goldcoasthoney.jpg");
+     }
+ </style>
 <body>
     <header><h1>AbantuReads</h1>
         <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
