--- a/HTML files/adminPage.html
+++ b/HTML files/adminPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page</title>
     <link rel="stylesheet" href="/Styling/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 </head>
 <body>
     <header><h1>AbantuReads</h1>
@@ -25,7 +25,7 @@
         </table>
     </main>
 
-    <div class="spinner text-primary" role="status">
+    <div class="spinner-border text-info" role="status">
         <span class="visually-hidden">Loading...</span>
     </div> 
     
