--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AbantuReads</title>
     <link rel="stylesheet" href="/Styling/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
 </head>
-
+<style>
+    body{
+        background-image: url("https://i.postimg.cc/wBZJPxbX/young-student-working-assignment.jpg");
+     }
+ </style>
 <header><h1>AbantuReads</h1>
     <p><strong>A Tapestry of Tales, An Ode to African Heritage.</strong></p>
 </header>
@@ -21,9 +25,9 @@
 </nav>
 
 <body>
-    <div id="homeImage">
+    <!-- <div id="homeImage">
         <img src="https://i.postimg.cc/wBZJPxbX/young-student-working-assignment.jpg" alt="">
-    </div>
+    </div> -->
 
 
 <script src="/Scripts/landingPage.js"></script>
