--- a/HTML files/adminPage.html
+++ b/HTML files/adminPage.html
@@ -37,7 +37,7 @@
 
     <div id="footerLook">
         <footer>
-          &copy; 2023 AbantuReads
+          &copy; 2023 AbantuReads.Inc
         </footer>
      </div>
 </body>
