--- a/HTML files/contactPage.html
+++ b/HTML files/contactPage.html
@@ -27,7 +27,7 @@
 
     <div class="contact-form">
         <h2>Get In Touch!</h2>
-        <form>
+        <form action="https://formspree.io/f/xvojerye" method="POST">
             <label for="email">Email Address:</label>
             <input type="email" id="email" name="email" placeholder="Your Email Address" required>
             <label for="Message">Message</label>
